[TASK] enable sort fields in ui

--- a/Resources/Private/Templates/Index.html
+++ b/Resources/Private/Templates/Index.html
@@ -87,17 +87,20 @@
 				<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting"/>
 			</a>
 			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-				<div class="dropdown-item sort-action" data-action="sort-by-name">
+				<div class="dropdown-item sort-action sort-field" data-action="sort-by-name">
 					<span class="icon icon-size-small icon-actions-edit-upload"></span>
 					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.name"/></div>
-				<div class="dropdown-item sort-action" data-action="sort-by-date">
+				<div class="dropdown-item sort-action sort-field" data-action="sort-by-date">
 					<span class="icon icon-size-small icon-actions-edit-pick-date"></span>
 					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.date"/></div>
+				<div class="dropdown-item sort-action sort-field" data-action="sort-by-size">
+					<span class="icon icon-size-small icon-actions-edit-download"></span>
+					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.size"/></div>
 				<div class="dropdown-divider"></div>
-				<div class="dropdown-item sort-action" data-action="sort-order-asc" data-parameter="asc">
+				<div class="dropdown-item sort-action sort-order" data-action="sort-order-asc" data-parameter="asc">
 					<span class="icon icon-size-small icon-actions-document-export-t3d"></span>
 					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.asc"/></div>
-				<div class="dropdown-item sort-action" data-action="sort-order-dsc" data-parameter="dsc">
+				<div class="dropdown-item sort-action sort-order" data-action="sort-order-dsc" data-parameter="dsc">
 					<span class="icon icon-size-small icon-actions-document-import-t3d"></span>
 					<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.sorting.dsc"/></div>
 			</div>
