[TASK] allow getting selected files identifier for file-action by parameter

--- a/Resources/Private/Templates/Index.html
+++ b/Resources/Private/Templates/Index.html
@@ -74,7 +74,7 @@
 		</li>
 
 		<li class="nav-item fileaction">
-			<div class="nav-link view-action active" data-action="delete" data-parameter="">
+			<div class="nav-link ajax-action active" data-action="delete" data-parameter="selected">
 				<span class="icon icon-size-small icon-actions-delete"></span>
 				<f:translate key="LLL:EXT:digital_asset_management/Resources/Private/Language/locallang_mod.xlf:dam.labels.nav.actions.delete"/>
 			</div>
