[TASK] hide list-header in symbol-view

--- a/Resources/Private/Templates/Index.html
+++ b/Resources/Private/Templates/Index.html
@@ -43,7 +43,7 @@
 				<div class="maincontent col-12 view-symbols">
 					<div class="row folders">
 					</div>
-					<div class="row fileheader">
+					<div class="row fileheader hide-view-symbols">
 						<div class="grid file">
 							<div class="preview"></div>
 							<div class="grid-cell selectbox select-action" data-action="unselectAll">
