[TASK]  enable sorting in list-view table header

--- a/Resources/Private/Templates/Index.html
+++ b/Resources/Private/Templates/Index.html
@@ -53,10 +53,11 @@
 								<div class="icon apps-pagetree-page-default"></div>
 							</div>
 							<div class="info">
-								<div class="grid-cell filename"><p>Filename trans</p></div>
-								<div class="grid-cell filesize"><p>Size trans</p></div>
-								<div class="grid-cell moddate"><p>Modification date trans</p></div>
-							</div>  </div>
+								<div class="grid-cell filename sort-action" data-action="sort-by-name"><p>Filename trans</p></div>
+								<div class="grid-cell filesize sort-action" data-action="sort-by-size"><p>Size trans</p></div>
+								<div class="grid-cell moddate sort-action" data-action="sort-by-date"><p>Modification date trans</p></div>
+							</div>
+						</div>
 					</div>
 					<div class="row files">
 					</div>
