[TASK] hide upload divs by default

--- a/Resources/Private/Templates/Index.html
+++ b/Resources/Private/Templates/Index.html
@@ -78,12 +78,12 @@
 	<div class="dropzone hidden" >
 		<div class="dropzone-hint localize" data-l10nkey="dam.labels.dropyourfileshere"></div>
 	</div>
-	<div class="well upload-in-progress">
+	<div class="well upload-in-progress hidden">
 		<div class="view-action" data-action="showUploadProgress" data-parameter="">
 			<span class="icon icons-size-medium icon-spinner-circle" ></span><span class="localize" data-l10nkey="dam.labels.uploadinprogress">Upload in progress!</span>
 		</div>
 	</div>
-	<div class="well upload-progress">
+	<div class="well upload-progress hidden">
 		<ul>
 			<li>FILEFAKENAME</li>
 		</ul>
